:sparkles: Implemented new rest endpoint for requesting changed files
